# srcAttributor

./: .gitignore  CMakeLists.txt  Makefile  Questions.md  README.md
attributor/: AttributeDocumentation.md  How2Use.txt  Makefile  README.md  attributor  attributor.cpp  openxml.cpp  openxml.hpp  test1.cpp  test2  test2.cpp  test2.cpp.xml  test3  test3.cpp  test3.cpp.xml  test4  test4.cpp  test4.cpp.xml  test4.json  test5  test5.cpp  test5.cpp.xml
attributor/testFiles/: Makefile  TestFixes.txt
attributor/testFiles/test1/: test1.cpp.xml
attributor/testFiles/test2/: test2.cpp.xml
attributor/testFiles/test3/: test3.cpp.xml
attributor/testFiles/test4/: test4.cpp.xml
attributor/testFiles/test5/: test5.cpp.xml  test5.json
cli11 shenanigans/: Makefile  attributor  attributor.cpp
src/: CMakeLists.txt
src/cpp/: attributor.cpp  json.cpp  main.cpp  xml.cpp
src/hpp/: attributor.hpp  json.hpp  xml.hpp
test/: CMakeLists.txt
testing/: test1.1.json  test1.cpp.xml  test1.json  test2.1.json  test2.cpp.xml  test2.json  test3.1.json  test3.cpp.xml  test3.json  test4.1.json  test4.cpp.xml  test5.1.json  test5.cpp  test5.cpp.xml  test6.cpp
